# AuditFullStack

./: .env.local  .replit  CREATE_ENHANCED_SAMPLE_SHEETS.py  CREATE_SAMPLE_SHEETS.py  DEVELOPMENT_GUIDE.md  LOCAL_SETUP.md  MULTI_CONNECTOR_DESIGN.md  README.md  SAMPLE_DATA_QUERIES.sql  SAMPLE_Followup_Audit_Questions_Enhanced.xlsx  STARK_AUDIT_DATA_SUMMARY.md  STARK_AUDIT_SHEETS_ANALYSIS.md  database_setup_complete.sql  drizzle.config.json  installation_instructions.md  package-lock.json  package.json  pyproject.toml  replit.md  start_both.sh  start_flask.sh  start_react.sh  test_excel.py  vite.config.ts
attached_assets/: Pasted-please-provide-run-ID-and-tester-and-status-where-Statuses-are-failed-To-provide-the-requested-info-1754525363359_1754525363359.txt
client/src/: App.tsx  index.css
client/src/components/wizard/: step-five.tsx  step-one.tsx  (+4 more)
client/src/lib/: queryClient.ts
client/src/pages/: dashboard.tsx  settings.tsx  veritas-gpt.tsx  wizard.tsx
database/: README.md  ddl.sql  dml.sql  exact_database_dump.sql  fix_connector_constraint.sql  latest_ddl.sql  latest_dml.sql  replit_production_ddl.sql  replit_production_dml.sql
demo/: README.md  mock_agent_executor.py  mock_connectors.py  setup_demo_data.py
public/: test_audit_questions.xlsx
server/: SAMPLE_Followup_Audit_Questions.xlsx  SAMPLE_Primary_Audit_Questions.xlsx  api.ts  app.py  data_connectors.py  index.ts  routes.ts  simple_flask.py  storage.ts  veritas_gpt_enhanced.py  veritas_gpt_langgraph.py
shared/: schema.ts
utilities/: README.md  answer_sheet_converter.py  llm_answer_generator.py
(+13 files in other folders)
