[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.26",
    "langchain-core>=0.3.69",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "xlrd>=2.0.2",
]
